--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@ var woofing = 0;
 function playToggle() {
   if (init === 0) {
     song.currentTime = 19.940;
-    song.play();
-    anim();
+    setTimeout(beginIt, 0.15);
     init = 1;
   }
   else if (woofing === 0) {
@@ -304,6 +303,11 @@ function playToggle() {
   }
 }
 
+function beginIt(){
+  song.play();
+  anim();
+}
+
 function woofEnd(){
   woofing = 0;
 }
@@ -317,8 +321,19 @@ function anim() {
   rot.style.animationPlayState = "running";
 }
 
+function getRandomInt(min, max) {
+  min = Math.ceil(min);
+  max = Math.floor(max);
+  return Math.floor(Math.random() * (max - min)) + min; //The maximum is exclusive and the minimum is inclusive
+}
 
+chooser = getRandomInt(0, 3);
 
+cGr = "#E8FDF5";
+cBl = "#357EDD";
+
+bgColors = [];
+textColors = [];
 
 
 
