--- a/index.html
+++ b/index.html
@@ -321,19 +321,19 @@ function anim() {
   rot.style.animationPlayState = "running";
 }
 
-function getRandomInt(min, max) {
-  min = Math.ceil(min);
-  max = Math.floor(max);
-  return Math.floor(Math.random() * (max - min)) + min; //The maximum is exclusive and the minimum is inclusive
-}
-
-chooser = getRandomInt(0, 3);
-
-cGr = "#E8FDF5";
-cBl = "#357EDD";
-
-bgColors = [];
-textColors = [];
+// function getRandomInt(min, max) {
+//   min = Math.ceil(min);
+//   max = Math.floor(max);
+//   return Math.floor(Math.random() * (max - min)) + min; //The maximum is exclusive and the minimum is inclusive
+// }
+//
+// chooser = getRandomInt(0, 3);
+//
+// cGr = "#E8FDF5";
+// cBl = "#357EDD";
+//
+// bgColors = [];
+// textColors = [];
 
 
 
